新增Claude角色规则，修复首页侠士图片刷新消失问题，修复悬赏广场揭榜显示不正确的问题